bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:5: error: ')' expected but 'else' found.
      else{
      ^